# mlx-fine-tuning-pipeline

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  opencode.json  package.json  pipline_output_example.md  pylock.toml  pyproject.toml  ruff.toml  skills-lock.json  uv.toml
.sandcastle/: Dockerfile  implement-prompt.md  main.mjs  main.mts  tsconfig.json
LLM/: docs.md
LLM/data/: train.jsonl  valid.jsonl
LLM/parquet_sets/: train-00000-of-00001.parquet
PRD/: PRD-document-conversion.md  PRD-synthetic-data-generation.md  checklist-readme-regen.md
PRD/done/: PRD-unsloth-migration.md  checklist-document-conversion.md  checklist-synthetic-data-generation.md
TRAIN_MAIN/: run.py
TRAIN_MAIN/converted/: Brain_Anatomy_Booklet.pdf.md  conversion_report.json  converted.parquet
TRAIN_MAIN/data/: train.jsonl  valid.jsonl
adapters/: adapter_config.json
adapters/lora/: chat_template.jinja
adapters/mlx/: tokenizer_config.json  train.jsonl  valid.jsonl
e2e/: conftest.py  test_pipeline.py  test_qa_generation.py  test_training.py
e2e/mini_train/: all.jsonl  train.jsonl  valid.jsonl
src/: data_prep_flow.py  pipeline.py  pipeline_ml.py  pipeline_play.py  training_flow.py  utils.py
src/data_prep/: convert.py  create_training_data.py  generate.py  load.py  transform.py
src/mlx/: train.py
src/play/: lora_play.py  (+2 more)
test/: test_chunk_processing.py  test_convert.py  test_create_training_data.py  test_generate.py  test_load.py  test_pipeline_convert.py  test_pipeline_generate.py  test_split_dataset.py  test_training_config.py  test_transform.py  test_utils.py
(+3 files in other folders)
