[project]
name = "lora-pipeline"
version = "0.1.0"
description = "LoRA fine-tuning pipeline for language models on Apple Silicon and NVIDIA GPUs, with Metaflow orchestration and Polars data processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling",
    "metaflow==2.19.3",
    "openai",
    "unsloth",
    "numpy==2.3.4",
    "ollama==0.6.0",
    "polars==1.34.0",
    "hf_transfer",
    "mlx-tune>=0.5.1",
    "opencv-python-headless>=4.13.0.92",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = ["pytest==8.4.2", "pytest-cov==7.0.0", "python-dotenv"]
